--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "reminder/interruptor service",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "app.js",
     "test": "mocha"
   },
   "author": "Leslie Behum",
